# alice_life_bot

./: .env.default  Dockerfile  Makefile  README.md  docker-compose.dev.yml  pyproject.toml
src/: config.py  logging.json  main.py
src/bot/: keyboards.py  states.py
src/bot/handlers/: __init__.py  cancel.py  help.py  poll.py  start.py
src/bot/handlers/helpers/: __init__.py
src/bot/texts/: buttons.py  cancel.py  help.py  poll.py  start.py
src/db/: models.py  repository.py
