[tool.poetry]
name = "Alice life bot"
version = "0.0.1"
description = "Bot designed only for user surveys"
authors = ["Schudov <chudov42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.20"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
